--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,13 +18,13 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.713</td>
+<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.741</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookInfoListTest.html">BookInfoListTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/1_BookInfoListTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/1_BookInfoListTest.html">BookInfoListTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/1_BookInfoListTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookInfoListTest.html">BookInfoListTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/1_BookInfoListTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/1_BookInfoListTest.html">BookInfoListTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/1_BookInfoListTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
@@ -33,10 +33,10 @@
 <td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td><td><a name="shoulNotBeEqualToAnotherBook"></a><a href="com/tw/biblioteca/2_BookInfoTest.html#shoulNotBeEqualToAnotherBook">shoulNotBeEqualToAnotherBook</a></td><td>Success</td><td></td><td>0.000</td>
@@ -45,16 +45,19 @@
 <td><a href="com/tw/biblioteca/3_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessage"></a><a href="com/tw/biblioteca/3_LibrarianTest.html#shouldDisplaySuccessMessage">shouldDisplaySuccessMessage</a></td><td>Success</td><td></td><td>0.004</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/3_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.325</td>
+<td><a href="com/tw/biblioteca/3_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/3_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.358</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplayFailureMessage"></a><a href="com/tw/biblioteca/3_LibrarianTest.html#shouldDisplayFailureMessage">shouldDisplayFailureMessage</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.002</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
@@ -66,7 +69,7 @@
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.003</td>
+<td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 </table>
 </body>
