--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -11,13 +11,13 @@
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/1_BookInfoListTest.html">BookInfoListTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_BookInfoTest.html">BookInfoTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibrarianTest.html">LibrarianTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td>
 </tr>
 <tr>
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td>
