--- a/reports/frame-sourcefiles-com.tw.biblioteca.html
+++ b/reports/frame-sourcefiles-com.tw.biblioteca.html
@@ -18,13 +18,13 @@ com.tw.biblioteca
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.BibliotecaApp.html">BibliotecaApp</a> <i>(63%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.BookInfo.html">BookInfo</a> <i>(78%)</i></td>
-</tr>
-<tr>
-<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.BookInfoList.html">BookInfoList</a> <i>(100%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Book.html">Book</a> <i>(78%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Librarian.html">Librarian</a> <i>(100%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Library.html">Library</a> <i>(100%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Menu.html">Menu</a> <i>(90%)</i></td>
