--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -20,13 +20,13 @@
 <td nowrap><a href="0_BibliotecaAppTest.html" target="classFrame">BibliotecaAppTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="1_BookInfoListTest.html" target="classFrame">BookInfoListTest</a></td>
+<td nowrap><a href="1_BookTest.html" target="classFrame">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="2_BookInfoTest.html" target="classFrame">BookInfoTest</a></td>
+<td nowrap><a href="2_LibrarianTest.html" target="classFrame">LibrarianTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="3_LibrarianTest.html" target="classFrame">LibrarianTest</a></td>
+<td nowrap><a href="3_LibraryTest.html" target="classFrame">LibraryTest</a></td>
 </tr>
 <tr>
 <td nowrap><a href="4_MenuTest.html" target="classFrame">MenuTest</a></td>
