--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,16 +18,16 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.722</td>
+<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.845</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
@@ -39,25 +39,25 @@
 <td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessage"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplaySuccessMessage">shouldDisplaySuccessMessage</a></td><td>Success</td><td></td><td>0.004</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.342</td>
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.343</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplayFailureMessage"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplayFailureMessage">shouldDisplayFailureMessage</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndAddTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndAddTheBook">shouldAcceptValidBookNameFromUserAndAddTheBook</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndAddTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndAddTheBook">shouldAcceptValidBookNameFromUserAndAddTheBook</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption1"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption1">shouldReturnMenuOptionChosenforOption1</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption1"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption1">shouldReturnMenuOptionChosenforOption1</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption2"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption2">shouldReturnMenuOptionChosenforOption2</a></td><td>Success</td><td></td><td>0.002</td>
@@ -66,25 +66,28 @@
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption3"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption3">shouldReturnMenuOptionChosenforOption3</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption4"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption4">shouldReturnMenuOptionChosenforOption4</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.006</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.007</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.003</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 </table>
 </body>
