added spec for hashcode in book

--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,7 +18,7 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.666</td>
+<td><a href="com/tw/biblioteca/0_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/0_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.740</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.001</td>
@@ -27,25 +27,31 @@
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareTwoEqualBooksUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareTwoEqualBooksUsingHashcode">shouldCompareTwoEqualBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToAnotherBook"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToAnotherBook">shoulNotBeEqualToAnotherBook</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToAnotherBook"></a><a href="com/tw/biblioteca/1_BookTest.html#shoulNotBeEqualToAnotherBook">shoulNotBeEqualToAnotherBook</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.344</td>
+<td><a href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/1_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.341</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.023</td>
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulReturn"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplaySuccessMessageForSuccessfulReturn">shouldDisplaySuccessMessageForSuccessfulReturn</a></td><td>Success</td><td></td><td>0.000</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldAcceptValidBookNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldAcceptValidBookNameFromUserAndRemoveTheBook">shouldAcceptValidBookNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.020</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt"></a><a href="com/tw/biblioteca/2_LibrarianTest.html#shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt">shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt</a></td><td>Success</td><td></td><td>0.000</td>
@@ -57,7 +63,7 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldNotDisplayCheckedOutBooks">shouldNotDisplayCheckedOutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyReturned"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyReturned">shouldReturnTrueIfSuccessfullyReturned</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.000</td>
@@ -69,22 +75,22 @@
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToIssue"></a><a href="com/tw/biblioteca/3_LibraryTest.html#shouldReturnFalseIfFailedToIssue">shouldReturnFalseIfFailedToIssue</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption1"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption1">shouldReturnMenuOptionChosenforOption1</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption1"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption1">shouldReturnMenuOptionChosenforOption1</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption2"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption2">shouldReturnMenuOptionChosenforOption2</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption3"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption3">shouldReturnMenuOptionChosenforOption3</a></td><td>Success</td><td></td><td>0.002</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption3"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption3">shouldReturnMenuOptionChosenforOption3</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption4"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption4">shouldReturnMenuOptionChosenforOption4</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosenforOption4"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnMenuOptionChosenforOption4">shouldReturnMenuOptionChosenforOption4</a></td><td>Success</td><td></td><td>0.002</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnInvalidOptionMessage"></a><a href="com/tw/biblioteca/4_MenuTest.html#shouldReturnInvalidOptionMessage">shouldReturnInvalidOptionMessage</a></td><td>Success</td><td></td><td>0.002</td>
@@ -96,13 +102,13 @@
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldExitIfOptionTwoIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldExitIfOptionTwoIsChosen">shouldExitIfOptionTwoIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.008</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.005</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/5_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/5_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/6_WelcomeMessageTest.html">WelcomeMessageTest</a></td><td><a name="shouldPrintTheWelcomeMessage"></a><a href="com/tw/biblioteca/6_WelcomeMessageTest.html#shouldPrintTheWelcomeMessage">shouldPrintTheWelcomeMessage</a></td><td>Success</td><td></td><td>0.000</td>
