refactoring: added class objectives

--- a/reports/allclasses-frame.html
+++ b/reports/allclasses-frame.html
@@ -14,7 +14,7 @@
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/1_BookTest.html">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_LibrarianTest.html">LibrarianTest</a></td>
+<td nowrap><a target="classFrame" href="com/tw/biblioteca/2_LibraryControllerTest.html">LibraryControllerTest</a></td>
 </tr>
 <tr>
 <td nowrap><a target="classFrame" href="com/tw/biblioteca/3_LibraryTest.html">LibraryTest</a></td>
