--- a/reports/com/tw/biblioteca/package-frame.html
+++ b/reports/com/tw/biblioteca/package-frame.html
@@ -23,7 +23,7 @@
 <td nowrap><a href="1_BookTest.html" target="classFrame">BookTest</a></td>
 </tr>
 <tr>
-<td nowrap><a href="2_LibrarianTest.html" target="classFrame">LibrarianTest</a></td>
+<td nowrap><a href="2_LibraryControllerTest.html" target="classFrame">LibraryControllerTest</a></td>
 </tr>
 <tr>
 <td nowrap><a href="3_LibraryTest.html" target="classFrame">LibraryTest</a></td>
