--- a/reports/frame-sourcefiles.html
+++ b/reports/frame-sourcefiles.html
@@ -21,10 +21,10 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Book.html">Book</a> <i>(100%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Librarian.html">Librarian</a> <i>(100%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Library.html">Library</a> <i>(100%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Library.html">Library</a> <i>(100%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.LibraryController.html">LibraryController</a> <i>(100%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.tw.biblioteca.Menu.html">Menu</a> <i>(90%)</i></td>
